--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ h1 {
     margin-top: 2rem;
     color: rgb(220, 220, 220);
     letter-spacing: 1.5rem;
+    text-shadow: 4px 4px 10px black;
 
 
 }
@@ -75,15 +76,12 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: end;
-}
-
-.item h3 {
-    color: white;
     text-align: end;
+    color: white;
+    text-shadow: 4px 4px 10px black;
 }
 
 .item p {
-    text-align: end;
     width: 50%;
     color: lightgray;
 }
